k8s/heimdall/heimdall.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - name: heimdall
          image: linuxserver/heimdall:latest
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: heimdall-config
              mountPath: /config
      volumes:
        - name: heimdall-config
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
spec:
  type: NodePort
  selector:
    app: heimdall
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31100
